objects/Contribution__c.object
<CustomObject>
    <description>Holds the contributed amount by each member</description>
    <fields>
        <fullName>Contribution__c</fullName>
        <label>Contribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <description>Expense by individual member</description>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Contribution</relationshipLabel>
        <relationshipName>Contribution</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <description>Holds the member record who has made a payment</description>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Contribution</relationshipLabel>
        <relationshipName>Contribution</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contribution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Con-{0000}</displayFormat>
        <label>Contribution Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>